syntax = "proto3"; 
option csharp_namespace = "CalcEngineService.Messages";
import "google/protobuf/timestamp.proto";

message ParameterSetMeshUpdateMessage {
  string ticker = 1;
  google.protobuf.Timestamp priceTime = 2;
}
